--- a/TermProject.vcxproj.filters
+++ b/TermProject.vcxproj.filters
@@ -39,6 +39,9 @@
     <ClInclude Include="pch.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="COpenCVProcess.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
     <ClInclude Include="Dib.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -57,6 +60,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="pch.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="COpenCVProcess.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Dib.cpp">
