--- a/TermProject.vcxproj
+++ b/TermProject.vcxproj
@@ -186,6 +186,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="CImageDialog.h" />
     <ClInclude Include="COpenCVProcess.h" />
     <ClInclude Include="Dib.h" />
     <ClInclude Include="framework.h" />
@@ -198,6 +199,7 @@
     <ClInclude Include="TermProjectView.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="CImageDialog.cpp" />
     <ClCompile Include="COpenCVProcess.cpp" />
     <ClCompile Include="Dib.cpp" />
     <ClCompile Include="MainFrm.cpp" />
