--- a/TermProject.vcxproj.filters
+++ b/TermProject.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Dib.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="CImageDialog.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="TermProject.cpp">
@@ -66,6 +69,9 @@
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="Dib.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="CImageDialog.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
